# TramoTDA

./: README.md  pyproject.toml  test.py
repo/src/: plotting.py
repo/src/tramoTDA.egg-info/: requires.txt  top_level.txt
repo/test/: test.py
scripts/: flowchart_images.py  generate_images_to_flowchart.py  poo_flowchart.py
tramoTDA/: analysis.py  data.py  plotting.py
tramoTDA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
